버튼 이동 기능 추가

--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -5,8 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
-<title>KEB 하나은행 기업뱅킹 오픈뱅킹 | Lime Whale | Portfolio</title>
+<!-- <script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script> -->
+<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<title>Finnq App | Lime Whale | Portfolio</title>
 </head>
 <body>
 <div id="wrap">
@@ -92,7 +93,7 @@
 					</div>
 				</div>
 
-				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
 			</article>
 		</div><!-- //container -->
 	</section>
