--- a/detail/mobile/m_krispy.html
+++ b/detail/mobile/m_krispy.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
             </article>
         </div><!-- //container -->
     </section>
