--- a/detail/web/w_namdong_k.html
+++ b/detail/web/w_namdong_k.html
@@ -58,7 +58,7 @@
                     </ul>
                 </div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
 
             </article>
         </div><!-- //container -->
