--- a/index.html
+++ b/index.html
@@ -454,10 +454,10 @@ $(function(){
 
 	// 상세 화면 본 후 다시 스크롤 이동처리
 	function initScroll() {
-		let offsetVal = window.location.href.split('?')[1];
+		let offsetVal = Math.floor(window.location.href.split('?')[1]) - 300;
 		if (offsetVal != null || offsetVal != undefined) {
 			setTimeout(function(){
-	 			$('html, body').animate({scrollTop : offsetVal - 200}, 10)
+	 			$('html, body').animate({scrollTop : offsetVal}, 10)
 			},10);
 		}
 	}
@@ -528,12 +528,11 @@ $(function(){
 	checksubscroll();
 	skillListCardFlip();
 
-	console.log('%c UI Developer %c HEO.D.K \n 잘 부탁드립니다.', 'background-color:#222; color:#fff; font-size:23px;',
-			'color:#fff; font-size:22px;');
+	console.log('%c UI Developer %c HEO.D.K \n 잘 부탁드립니다.', 'background-color:#222; color:#fff; font-size:23px;', 'color:#fff; font-size:22px;');
 
 	function typingAnimate()
 	{
-		var target 		= $(".typing--txt > ul  > li");
+		var target 		= $('.typing--txt > ul  > li');
 		var typingBool 	= false;
 		var typingIdx	= 0;
 		var liIndex 	= 0;
@@ -544,7 +543,7 @@ $(function(){
 
 		// liIndex 인덱스로 구분해 한줄씩 가져옴
 		// 한글자씩 잘라 배열로만든다
-		typingTxt = typingTxt.split("");
+		typingTxt = typingTxt.split('');
 
 		// 타이핑이 진행되지 않았다면
 		if(typingBool==false) {
@@ -554,14 +553,14 @@ $(function(){
 
 		function typing()
 		{
-		  	$(".typing ul li").removeClass("on");
-		   	$(".typing ul li").eq(liIndex).addClass("on");
+		  	$('.typing ul li').removeClass('on');
+		   	$('.typing ul li').eq(liIndex).addClass('on');
 
 		  	//현재 타이핑되는 문장에만 커서 애니메이션을 넣어준다.
 		  	// 타이핑될 텍스트 길이만큼 반복
 		  	if(typingIdx<typingTxt.length)
 		  	{
-			 	$(".typing ul li").eq(liIndex).append(typingTxt[typingIdx]); // 한글자씩 이어준다.
+			 	$('.typing ul li').eq(liIndex).append(typingTxt[typingIdx]); // 한글자씩 이어준다.
 			 	typingIdx++;
 		   	}
 		   	else
@@ -601,7 +600,7 @@ $(function(){
 				  		typingTxt = target.eq(liIndex).text();
 
 					   //타이핑 결과 모두 지우기
-				  		$(".typing ul li").html("")
+				  		$('.typing ul li').html('')
 
 						//반복시작
 						tyInt = setInterval(typing,100);
