텍스트 수정

--- a/detail/mobile/m_adcap.html
+++ b/detail/mobile/m_adcap.html
@@ -42,6 +42,7 @@
 						<li><em>성과</em> :
 							<ul>
 								<li>Semantic Markup 구현</li>
+								<li>좌/우 분리형 UI 구현</li>
 								<li>고해상력(High PPI) 디스플레이 대응</li>
 							</ul>
 						</li>
