--- a/index.html
+++ b/index.html
@@ -488,10 +488,10 @@ $(function(){
 
 		if (_scrollTop > 0 ) {
 			$('#header__area').addClass('on');
-			$('.main_visual').addClass('on');
+			$('.main__visual').addClass('on');
 		} else {
 			$('#header__area').removeClass('on');
-			$('.main_visual').removeClass('on');
+			$('.main__visual').removeClass('on');
 		}
 	}
 
