--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 		<div class="footer_area">
 			<p class="footer_logo"><img src="img/footer_whale.png" alt="whale tail" /></p>
 			<div class="copyright">
-				<p>Copyright © limewhale.com All rights reserved.</p>
+				<p>Copyright © HEO.D.K All rights reserved.</p>
 				<address><a href="mailto:limewhale@daum.net">limewhale@daum.net</a></address>
 			</div>
 		</div>
