--- a/detail/mobile/m_adcap.html
+++ b/detail/mobile/m_adcap.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
+<script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>애드캡슐소프트 MOBILE 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
