css 정리 및 수정

--- a/detail/web/w_mirae.html
+++ b/detail/web/w_mirae.html
@@ -23,6 +23,16 @@
 
                 <div class="desc_area">
                     <h1 class="title">WORK</h1>
+
+                    <div class="point__detail--wrap">
+                        <h2 class="sub_title">Three Points</h2>
+                        <ul class="point__detail">
+                            <li>공통 UI모션 개발</li>
+                            <li>퍼블리셔 PL</li>
+                            <li>웹 접근성 획득</li>
+                        </ul>
+                    </div>
+
                     <ul class="description">
                         <li class="progress"><em>참여도</em> :
                             <span>
