--- a/detail/web/w_samsung.html
+++ b/detail/web/w_samsung.html
@@ -10,71 +10,81 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <p class="tit">SAMSUNG POP</p>
-                <p>삼성증권 홈페이지 개편</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<p class="tit">SAMSUNG POP</p>
+				<p>삼성증권 홈페이지 개편</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:60%"></div>
-                                <span title="참여 영역 중 기여도">60%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
-                        <li><em>기간</em> : 2014.08.11 ~ 2014.12.16</li>
-                        <li><em>담당업무</em> :
-                            <ul>
-                                <li>삼성증권 : 인터넷뱅킹, 금융상품, 기업뱅킹, OPEN-API</li>
-                                <li>삼성뱅킹 전체 (임직원 전용)</li>
-                            </ul>
-                        </li>
-                        <li><em>고객사</em> : 삼성증권</li>
-                        <li><em>성과</em> :
-                            <ul>
-                                <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">삼성증권 웹 접근성 마크 획득</a></li>
-                                <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">은퇴퇴자산관리 웹 접근성 마크 획득</a></li>
-                                <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">회사소개(국문) 웹 접근성 마크 획득</a></li>
-                                <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">회사소개(영문) 웹 접근성 마크 획득</a></li>
-                                <li>PC, 테블릿 반응형 웹 사이트로 테블릿 및 PC에 최적화 구현</li>
-                                <li>W3C Markup Validator, 웹 접근성 자동 평가도구(K-wah) 통과</li>
-                                <li>익스플로러(ie8~) 및 모던 브라우저 크로스브라우징</li>
-                                <li>Semantic Markup 퍼블리싱</li>
-                            </ul>
-                        </li>
-                        <li><a href="https://www.samsungpop.com/" target="_blank" class="ico_link"><em>사이트 바로가기</em> : www.samsungpop.com/‎</a></li>
-                    </ul>
-                </div>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">WORK</h1>
 
-                <div class="slide_guide">
-                    <span class="ico_guide">slide_guide</span>
-                    <span class="slide_count">
-                        <span class="page_num">1</span> / <span class="page_total">0</span>
-                    </span>
-                </div>
+					<div class="point__detail--wrap">
+						<h2 class="sub_title">Three Points</h2>
+						<ul class="point__detail">
+							<li>웹 접근성 마크 획득</li>
+							<li>반응형 웹</li>
+							<li>웹 표준 마크업</li>
+						</ul>
+					</div>
 
-                <div id="touchSlider">
-                    <ul class="port_info">
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_stock1.jpg" alt="삼성증권, 삼성뱅킹 웹 페이지 스크린샷1" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_stock2.jpg" alt="삼성증권, 삼성뱅킹 웹 페이지 스크린샷2" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_stock3.jpg" alt="삼성증권, 삼성뱅킹 웹 페이지 스크린샷3" /></li>
-                    </ul>
-                </div>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:60%"></div>
+								<span title="참여 영역 중 기여도">60%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+						<li><em>기간</em> : 2014.08.11 ~ 2014.12.16</li>
+						<li><em>담당업무</em> :
+							<ul>
+								<li>삼성증권 : 인터넷뱅킹, 금융상품, 기업뱅킹, OPEN-API</li>
+								<li>삼성뱅킹 전체 (임직원 전용)</li>
+							</ul>
+						</li>
+						<li><em>고객사</em> : 삼성증권</li>
+						<li><em>성과</em> :
+							<ul>
+								<li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">삼성증권 웹 접근성 마크 획득</a></li>
+								<li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">은퇴퇴자산관리 웹 접근성 마크 획득</a></li>
+								<li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">회사소개(국문) 웹 접근성 마크 획득</a></li>
+								<li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">회사소개(영문) 웹 접근성 마크 획득</a></li>
+								<li>PC, 테블릿 반응형 웹 사이트로 테블릿 및 PC에 최적화 구현</li>
+								<li>W3C Markup Validator, 웹 접근성 자동 평가도구(K-wah) 통과</li>
+								<li>익스플로러(ie8~) 및 모던 브라우저 크로스브라우징</li>
+								<li>Semantic Markup 퍼블리싱</li>
+							</ul>
+						</li>
+						<li><a href="https://www.samsungpop.com/" target="_blank" class="ico_link"><em>사이트 바로가기</em> : www.samsungpop.com/‎</a></li>
+					</ul>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
-            </article>
-        </div><!-- //container -->
-    </section>
+				<div class="slide_guide">
+					<span class="ico_guide">slide_guide</span>
+					<span class="slide_count">
+						<span class="page_num">1</span> / <span class="page_total">0</span>
+					</span>
+				</div>
 
-    <!-- footer -->
+				<div id="touchSlider">
+					<ul class="port_info">
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_stock1.jpg" alt="삼성증권, 삼성뱅킹 웹 페이지 스크린샷1" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_stock2.jpg" alt="삼성증권, 삼성뱅킹 웹 페이지 스크린샷2" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_stock3.jpg" alt="삼성증권, 삼성뱅킹 웹 페이지 스크린샷3" /></li>
+					</ul>
+				</div>
+
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+			</article>
+		</div><!-- //container -->
+	</section>
+
+	<!-- footer -->
 </div>
 </body>
 </html>
