--- a/detail/mobile/m_adcap.html
+++ b/detail/mobile/m_adcap.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>애드캡슐소프트 MOBILE 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -23,6 +22,16 @@
 			<article id="content">
 				<div class="desc_area">
 					<h1 class="title">WORK</h1>
+
+					<div class="point__detail--wrap">
+						<h2 class="sub_title">Three Points</h2>
+						<ul class="point__detail">
+							<li>퍼블리셔 PL</li>
+							<li>효율적으로 협업</li>
+							<li>모바일 퍼스트</li>
+						</ul>
+					</div>
+
 					<ul class="description">
 						<li class="progress"><em>참여도</em> :
 							<span>
@@ -34,7 +43,7 @@
 						<li><em>기간</em> : 2015.01.05 ~ 2015.02.06</li>
 						<li><em>담당업무</em> :
 							<ul>
-								<li>애드캡슐 모바일 웹 메인 &amp; 서브메인 퍼블리싱 </li>
+								<li>애드캡슐 모바일 웹 메인 &amp; 서브메인 퍼블리싱</li>
 								<li>서브 컨텐츠 페이지 퍼블리싱</li>
 								<li>공통 마크업 가이드 제작</li>
 								<li>공통 UI/UX (스와이프 슬라이드, 스크롤페이징, 암막 레이어팝업등)</li>
