--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -23,6 +23,16 @@
 			<article id="content">
 				<div class="desc_area">
 					<h1 class="title">WORK</h1>
+
+					<div class="point__detail--wrap">
+						<h2 class="sub_title">Three Points</h2>
+						<ul class="point__detail">
+							<li>공통 UI모션 개발</li>
+							<li>차트 API 구현</li>
+							<li>SCSS, GIT, CSS3</li>
+						</ul>
+					</div>
+
 					<ul class="description">
 						<li class="progress"><em>참여도</em> :
 							<span>
