--- a/detail/mobile/m_hana_app.html
+++ b/detail/mobile/m_hana_app.html
@@ -22,6 +22,16 @@
 			<article id="content">
 				<div class="desc_area">
 					<h1 class="title">WORK</h1>
+
+					<div class="point__detail--wrap">
+						<h2 class="sub_title">Three Points</h2>
+						<ul class="point__detail">
+							<li>공통 UI모션 개발</li>
+							<li>HTML5, CSS3, Jquery</li>
+							<li>모바일 퍼스트</li>
+						</ul>
+					</div>
+
 					<ul class="description">
 						<li class="progress"><em>참여도</em> :
 							<span>
