--- a/detail/mobile/m_angel_e.html
+++ b/detail/mobile/m_angel_e.html
@@ -21,7 +21,7 @@
 
 			<article id="content">
 				<div class="desc_area">
-					<h1 class="title">WORK</h1>
+					<h1 class="title">Description</h1>
 
 					<ul class="description">
 						<li class="progress"><em>참여도</em> :
@@ -72,6 +72,7 @@
 			</article>
 		</div><!-- //container -->
 	</section>
+
 
 	<!-- footer -->
 </div>
