--- a/detail/mobile/m_hana_app.html
+++ b/detail/mobile/m_hana_app.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="wrap">
+
 	<!-- header -->
 
 	<section id="container">
@@ -21,7 +22,7 @@
 
 			<article id="content">
 				<div class="desc_area">
-					<h1 class="title">WORK</h1>
+					<h1 class="title">Description</h1>
 
 					<div class="point__detail--wrap">
 						<h2 class="sub_title">Three Points</h2>
