--- a/detail/mobile/m_kloudbeer.html
+++ b/detail/mobile/m_kloudbeer.html
@@ -10,68 +10,68 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <h2>KLOUD BEER</h2>
-                <p>클라우드맥주 MOBILE</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<h2>KLOUD BEER</h2>
+				<p>클라우드맥주 MOBILE</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:100%"></div>
-                                <span title="참여 영역 중 기여도">100%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
-                        <li><em>기간</em> : 2014.05.12 ~ 2014.05.30</li>
-                        <li><em>담당업무</em> :
-                            <ul>
-                                <li>클라우드 맥주 메인 &amp; 서브메인 GUI 퍼블리싱 </li>
-                                <li>서브 컨텐츠 페이지 퍼블리싱 및 GUI 구현</li>
-                                <li>공통 마크업 가이드 제작 및 배포</li>
-                                <li>공통 UI 모션 개발</li>
-                            </ul>
-                        </li>
-                        <li><em>성과 :</em>
-                            <ul>
-                                <li><a href="http://www.i-award.or.kr/Web/Assess/FinalCandidateView.aspx?REG_SEQNO=4406" target="_blank" class="ico_link">웹 어워드 코리아 (WEB AWARD KOREA) 브랜드 이노베이션대상</a></li>
-                                <li>Semantic Markup 퍼블리싱</li>
-                                <li>고해상력(High PPI) 디스플레이 대응</li>
-                            </ul>
-                        </li>
-                        <li><em>고객사</em> : 롯데주류</li>
-                    </ul>
-                </div>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">Description</h1>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:100%"></div>
+								<span title="참여 영역 중 기여도">100%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+						<li><em>기간</em> : 2014.05.12 ~ 2014.05.30</li>
+						<li><em>담당업무</em> :
+							<ul>
+								<li>클라우드 맥주 메인 &amp; 서브메인 GUI 퍼블리싱 </li>
+								<li>서브 컨텐츠 페이지 퍼블리싱 및 GUI 구현</li>
+								<li>공통 마크업 가이드 제작 및 배포</li>
+								<li>공통 UI 모션 개발</li>
+							</ul>
+						</li>
+						<li><em>성과 :</em>
+							<ul>
+								<li><a href="http://www.i-award.or.kr/Web/Assess/FinalCandidateView.aspx?REG_SEQNO=4406" target="_blank" class="ico_link">웹 어워드 코리아 (WEB AWARD KOREA) 브랜드 이노베이션대상</a></li>
+								<li>Semantic Markup 퍼블리싱</li>
+								<li>고해상력(High PPI) 디스플레이 대응</li>
+							</ul>
+						</li>
+						<li><em>고객사</em> : 롯데주류</li>
+					</ul>
+				</div>
 
-                <div class="m_description">
-                    <div class="info">
-                        <div class="tit"><span>Kloud Beer</span> <br />사이트 바로가기 QR</div>
-                        <div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_kloud.png" alt="모바일 클라우드 바로가기 QR코드 - m.kloudbeer.com" /></div>
-                    </div>
-                    <div class="m_port_area_app">
-                        <ul class="m_app_list">
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud1.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud2.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud3.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud4.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud5.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                        </ul>
-                    </div>
-                </div>
+				<div class="m_description">
+					<div class="info">
+						<div class="tit"><span>Kloud Beer</span> <br />사이트 바로가기 QR</div>
+						<div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_kloud.png" alt="모바일 클라우드 바로가기 QR코드 - m.kloudbeer.com" /></div>
+					</div>
+					<div class="m_port_area_app">
+						<ul class="m_app_list">
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud1.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud2.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud3.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud4.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud5.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+						</ul>
+					</div>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
-            </article>
-        </div><!-- //container -->
-    </section>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+			</article>
+		</div><!-- //container -->
+	</section>
 
-    <!-- footer -->
+	<!-- footer -->
 </div>
 </body>
 </html>
