--- a/detail/mobile/m_krispy.html
+++ b/detail/mobile/m_krispy.html
@@ -10,66 +10,66 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <p class="tit">Krispykreme</p>
-                <p>크리스피 크림 도넛 MOBILE 국문</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<p class="tit">Krispykreme</p>
+				<p>크리스피 크림 도넛 MOBILE 국문</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:30%"></div>
-                                <span title="참여 영역 중 기여도">30%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
-                        <li><em>기간</em> : 2015.05.26 ~ 2015.08.14</li>
-                        <li><em>담당업무</em> :
-                            <ul>
-                                <li>서브 컨텐츠 페이지 퍼블리싱 및 GUI 구현</li>
-                                <li>공통 마크업 가이드 제작 및 배포</li>
-                                <li>공통 UI 모션 개발(스와이프 슬라이드, 스크롤페이징, 암막 레이어팝업, 전체메뉴등)</li>
-                            </ul>
-                        </li>
-                        <li><em>성과</em> :
-                            <ul>
-                                <li>Semantic Markup 퍼블리싱</li>
-                                <li>고해상력(High PPI) 디스플레이 대응</li>
-                            </ul>
-                        </li>
-                        <li><em>고객사</em> : 롯데리아 그룹</li>
-                    </ul>
-                </div>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">Description</h1>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:30%"></div>
+								<span title="참여 영역 중 기여도">30%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+						<li><em>기간</em> : 2015.05.26 ~ 2015.08.14</li>
+						<li><em>담당업무</em> :
+							<ul>
+								<li>서브 컨텐츠 페이지 퍼블리싱 및 GUI 구현</li>
+								<li>공통 마크업 가이드 제작 및 배포</li>
+								<li>공통 UI 모션 개발(스와이프 슬라이드, 스크롤페이징, 암막 레이어팝업, 전체메뉴등)</li>
+							</ul>
+						</li>
+						<li><em>성과</em> :
+							<ul>
+								<li>Semantic Markup 퍼블리싱</li>
+								<li>고해상력(High PPI) 디스플레이 대응</li>
+							</ul>
+						</li>
+						<li><em>고객사</em> : 롯데리아 그룹</li>
+					</ul>
+				</div>
 
-                <div class="m_description">
-                    <div class="info">
-                        <div class="tit"><span>krispykreme</span> <br />사이트 바로가기 QR</div>
-                        <div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_krisp.png" alt="모바일 크리스피 크림 도넛 바로가기 - m.krispykreme.co.kr" /></div>
-                    </div>
-                    <div class="m_port_area_app">
-                        <ul class="m_app_list">
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy1.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy2.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy3.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy4.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy5.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                        </ul>
-                    </div>
-                </div>
+				<div class="m_description">
+					<div class="info">
+						<div class="tit"><span>krispykreme</span> <br />사이트 바로가기 QR</div>
+						<div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_krisp.png" alt="모바일 크리스피 크림 도넛 바로가기 - m.krispykreme.co.kr" /></div>
+					</div>
+					<div class="m_port_area_app">
+						<ul class="m_app_list">
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy1.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy2.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy3.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy4.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy5.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+						</ul>
+					</div>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
-            </article>
-        </div><!-- //container -->
-    </section>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+			</article>
+		</div><!-- //container -->
+	</section>
 
-    <!-- footer -->
+	<!-- footer -->
 </div>
 </body>
 </html>
