--- a/detail/web/w_mofat.html
+++ b/detail/web/w_mofat.html
@@ -10,41 +10,41 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <p class="tit">MOFAT</p>
-                <p>외교통상부 통합문서 관리 시스템</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<p class="tit">MOFAT</p>
+				<p>외교통상부 통합문서 관리 시스템</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:30%"></div>
-                                <span title="참여 영역 중 기여도">30%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> : Java, Jsp, SQL, Jquery, Javacript</li>
-                        <li><em>기간</em> : 2012.10.01 – 2013.02.28</li>
-                        <li><em>담당업무</em> : 외교통상부 내부 보안 서류 시스템 개발, 해외 공관 서비스 오픈</li>
-                        <li><em>DBMS</em> : CUBRID</li>
-                        <li><em>Tool</em> : ( ECLIPSE / DEVON ) , <a href="http://www.markany.com/wp/?page_id=226" target="_blank">On-Nara BPS</a></li>
-                        <li><em>고객사</em> : (구)외교통상부, (현)외교부</li>
-                        <li><em>※내부 시스템이라 상세보기 화면이 없습니다.</em></li>
-                    </ul>
-                </div>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">Description</h1>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:30%"></div>
+								<span title="참여 영역 중 기여도">30%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> : Java, Jsp, SQL, Jquery, Javacript</li>
+						<li><em>기간</em> : 2012.10.01 – 2013.02.28</li>
+						<li><em>담당업무</em> : 외교통상부 내부 보안 서류 시스템 개발, 해외 공관 서비스 오픈</li>
+						<li><em>DBMS</em> : CUBRID</li>
+						<li><em>Tool</em> : ( ECLIPSE / DEVON ) , <a href="http://www.markany.com/wp/?page_id=226" target="_blank">On-Nara BPS</a></li>
+						<li><em>고객사</em> : (구)외교통상부, (현)외교부</li>
+						<li><em>※내부 시스템이라 상세보기 화면이 없습니다.</em></li>
+					</ul>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
-            </article>
-        </div><!-- //container -->
-    </section>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+			</article>
+		</div><!-- //container -->
+	</section>
 
-    <!-- footer -->
+	<!-- footer -->
 </div>
 </body>
 </html>
