--- a/detail/web/w_namdong_k.html
+++ b/detail/web/w_namdong_k.html
@@ -10,61 +10,61 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <p class="tit">KOSEP</p>
-                <p>한국남동발전 국문</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<p class="tit">KOSEP</p>
+				<p>한국남동발전 국문</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:30%"></div>
-                                <span title="참여 영역 중 기여도">30%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
-                        <li><em>담당업무</em> : 웹 접근성 검수, Smart BOD, 지속가능경영, 정보공개 메뉴 담당</li>
-                        <li><em>기간</em> : 2014.03.03 ~ 2014.05.02</li>
-                        <li><em>고객사</em> : 한국남동발전(주)</li>
-                        <li><em>성과</em> :
-                            <ul>
-                                <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">웹 접근성 인증 마크 획득</a></li>
-                                <li>익스플로러(ie8~) 및 모던 브라우저 크로스브라우징</li>
-                                <li>Semantic Markup 퍼블리싱</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">Description</h1>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:30%"></div>
+								<span title="참여 영역 중 기여도">30%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+						<li><em>담당업무</em> : 웹 접근성 검수, Smart BOD, 지속가능경영, 정보공개 메뉴 담당</li>
+						<li><em>기간</em> : 2014.03.03 ~ 2014.05.02</li>
+						<li><em>고객사</em> : 한국남동발전(주)</li>
+						<li><em>성과</em> :
+							<ul>
+								<li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">웹 접근성 인증 마크 획득</a></li>
+								<li>익스플로러(ie8~) 및 모던 브라우저 크로스브라우징</li>
+								<li>Semantic Markup 퍼블리싱</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 
-                <div class="slide_guide">
-                    <span class="ico_guide">slide_guide</span>
-                    <span class="slide_count">
-                        <span class="page_num">1</span> / <span class="page_total">0</span>
-                    </span>
-                </div>
+				<div class="slide_guide">
+					<span class="ico_guide">slide_guide</span>
+					<span class="slide_count">
+						<span class="page_num">1</span> / <span class="page_total">0</span>
+					</span>
+				</div>
 
-                <div id="touchSlider">
-                    <ul class="port_info">
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr1.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr2.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr3.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
-                    </ul>
-                </div>
+				<div id="touchSlider">
+					<ul class="port_info">
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr1.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr2.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr3.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
+					</ul>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
 
-            </article>
-        </div><!-- //container -->
-    </section>
+			</article>
+		</div><!-- //container -->
+	</section>
 
-    <!-- footer -->
+	<!-- footer -->
 </div>
 </body>
 </html>
