--- a/detail/web/w_ramada.html
+++ b/detail/web/w_ramada.html
@@ -10,54 +10,54 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <p class="tit">Ramada Casino</p>
-                <p>Ramada Casino 웹 사이트 서비스 운영</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<p class="tit">Ramada Casino</p>
+				<p>Ramada Casino 웹 사이트 서비스 운영</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:100%"></div>
-                                <span title="참여 영역 중 기여도">100%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> : PHP, Jquery, Javasrcipt</li>
-                        <li><em>기간</em> : 2010.04.12 ~ 2012.02.01</li>
-                        <li><em>담당업무</em> : Ramada Casino 사이트 운영 및 전산업무</li>
-                        <li><em>DBMS / Server</em> : MS-SQL / iis</li>
-                        <li><em>고객사</em> : Ramada Casino</li>
-                    </ul>
-                </div>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">Description</h1>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:100%"></div>
+								<span title="참여 영역 중 기여도">100%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> : PHP, Jquery, Javasrcipt</li>
+						<li><em>기간</em> : 2010.04.12 ~ 2012.02.01</li>
+						<li><em>담당업무</em> : Ramada Casino 사이트 운영 및 전산업무</li>
+						<li><em>DBMS / Server</em> : MS-SQL / iis</li>
+						<li><em>고객사</em> : Ramada Casino</li>
+					</ul>
+				</div>
 
-                <div class="slide_guide">
-                    <span class="ico_guide">slide_guide</span>
-                    <span class="slide_count">
-                        <span class="page_num">1</span> / <span class="page_total">0</span>
-                    </span>
-                </div>
+				<div class="slide_guide">
+					<span class="ico_guide">slide_guide</span>
+					<span class="slide_count">
+						<span class="page_num">1</span> / <span class="page_total">0</span>
+					</span>
+				</div>
 
-                <div id="touchSlider">
-                    <ul class="port_info">
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada1.jpg" alt="Ramada 웹 페이지 스크린 샷1" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada2.jpg" alt="Ramada 웹 페이지 스크린 샷2" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada3.jpg" alt="Ramada 웹 페이지 스크린 샷3" /></li>
-                    </ul>
-                </div>
+				<div id="touchSlider">
+					<ul class="port_info">
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada1.jpg" alt="Ramada 웹 페이지 스크린 샷1" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada2.jpg" alt="Ramada 웹 페이지 스크린 샷2" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada3.jpg" alt="Ramada 웹 페이지 스크린 샷3" /></li>
+					</ul>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
-            </article>
-        </div><!-- //container -->
-    </section>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+			</article>
+		</div><!-- //container -->
+	</section>
 
-    <!-- footer -->
+	<!-- footer -->
 </div>
 </body>
 </html>
