--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <div id="wrap">
+
 	<!-- header -->
 
 	<section id="container">
@@ -22,7 +23,7 @@
 
 			<article id="content">
 				<div class="desc_area">
-					<h1 class="title">WORK</h1>
+					<h1 class="title">Description</h1>
 
 					<div class="point__detail--wrap">
 						<h2 class="sub_title">Three Points</h2>
@@ -58,6 +59,7 @@
 								<li>소비평가 : 자신이 사용한 영수증으로 하는 소비평가 기능 제공</li>
 								<li>AI핀고분석 : 나의 소비, 소득을 분석하고 알맞은 금융 생활 조언 서비스</li>
 								<li>핀크마켓 : 혜택 많은 금융상품과 최고 할인률 기프티콘몰 서비스 제공</li>
+								<li>기타 이벤트 페이지 구현</li>
 							</ul>
 						</li>
 						<li><em>운영 서비스 3.0</em>
@@ -65,6 +67,7 @@
 								<li>대출 : T통신스코어를 활용하여 자신에게 최적화 된 금리비교, 추천상품을 제공</li>
 								<li>금융상품 : 예적금, 카드, 대출, 투자(p2p, 아트투자), 보험, 생활 속 핀크(해외송금, 기프티콘몰)등 일상속에서 자신에게 꼭 필요한 금융서비스를 제공</li>
 								<li>리얼리 : SNS기반 금융 커뮤니케이션으로 익명(별명)으로 매달 주어지는 챌리저를 도전하고 타인의 금융을 알아보는 서비스</li>
+								<li>기타 이벤트 페이지 구현</li>
 							</ul>
 						</li>
 						<li><em>성과</em> :
@@ -74,6 +77,7 @@
 								<li>Android/IOS 앱 오픈</li>
 								<li>1.0에서 2.0/3.0으로 개편하면서 UI/UX 향상</li>
 								<li>오픈뱅킹API 도입으로 은행/증권사 연결 다양화</li>
+								<li>UI 개편으로 사용성 개선, 신규회원 유입 증가</li>
 								<li>신규 서비스 추가 런칭</li>
 								<li>송금 서비스 전면 개편</li>
 								<li>금융 서비스 전면 개편</li>
