--- a/detail/mobile/m_tgif.html
+++ b/detail/mobile/m_tgif.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="wrap">
+
 	<!-- header -->
 
 	<section id="container">
@@ -21,7 +22,7 @@
 
 			<article id="content">
 				<div class="desc_area">
-					<h1 class="title">WORK</h1>
+					<h1 class="title">Description</h1>
 					<ul class="description">
 						<li class="progress"><em>참여도</em> :
 							<span>
