--- a/detail/web/w_dovol.html
+++ b/detail/web/w_dovol.html
@@ -10,56 +10,56 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <p class="tit">Dovol.Youth</p>
-                <p>청소년 자원봉사 활동정보 봉사시스템</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<p class="tit">Dovol.Youth</p>
+				<p>청소년 자원봉사 활동정보 봉사시스템</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:20%"></div>
-                                <span title="참여 영역 중 기여도">20%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> : JAVA, JSP, SQL, Jquery, javascript</li>
-                        <li><em>DBMS</em> : ORACLE</li>
-                        <li><em>Tool</em> : 전자정부 프레임</li>
-                        <li><em>기간</em> : 2013.03.01 ~ 2013.03.28</li>
-                        <li><em>담당업무</em> : 봉사활동 조회 및 입력/수정 정보 시스템 구축</li>
-                        <li><em>고객사</em> : 청소년 활동 진흥원</li>
-                    </ul>
-                </div>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">Description</h1>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:20%"></div>
+								<span title="참여 영역 중 기여도">20%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> : JAVA, JSP, SQL, Jquery, javascript</li>
+						<li><em>DBMS</em> : ORACLE</li>
+						<li><em>Tool</em> : 전자정부 프레임</li>
+						<li><em>기간</em> : 2013.03.01 ~ 2013.03.28</li>
+						<li><em>담당업무</em> : 봉사활동 조회 및 입력/수정 정보 시스템 구축</li>
+						<li><em>고객사</em> : 청소년 활동 진흥원</li>
+					</ul>
+				</div>
 
-                <div class="slide_guide">
-                    <span class="ico_guide">slide_guide</span>
-                    <span class="slide_count">
-                        <span class="page_num">1</span> / <span class="page_total">0</span>
-                    </span>
-                </div>
+				<div class="slide_guide">
+					<span class="ico_guide">slide_guide</span>
+					<span class="slide_count">
+						<span class="page_num">1</span> / <span class="page_total">0</span>
+					</span>
+				</div>
 
-                <div id="touchSlider">
-                    <ul class="port_info">
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol1.jpg" alt="청소년 자원봉사 메인 페이지 스크린샷1" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol2.jpg" alt="청소년 자원봉사 페이지 스크린샷2" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol3.jpg" alt="청소년 자원봉사 페이지 스크린샷3" /></li>
-                    </ul>
-                </div>
+				<div id="touchSlider">
+					<ul class="port_info">
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol1.jpg" alt="청소년 자원봉사 메인 페이지 스크린샷1" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol2.jpg" alt="청소년 자원봉사 페이지 스크린샷2" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol3.jpg" alt="청소년 자원봉사 페이지 스크린샷3" /></li>
+					</ul>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
 
-            </article>
-        </div><!-- //container -->
-    </section>
+			</article>
+		</div><!-- //container -->
+	</section>
 
-    <!-- footer -->
+	<!-- footer -->
 </div>
 </body>
 </html>
