--- a/detail/web/w_han.html
+++ b/detail/web/w_han.html
@@ -10,71 +10,71 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <p class="tit">KHNP</p>
-                <p>한국수력원자력 홈페이지 개편</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<p class="tit">KHNP</p>
+				<p>한국수력원자력 홈페이지 개편</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:40%"></div>
-                                <span title="참여 영역 중 기여도">40%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> :  <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
-                        <li><em>기간</em> : 2015.08.31 ~ 2015.12.10</li>
-                        <li><em>담당업무</em> :
-                            <ul>
-                                <li>한국수력원자력 사업소 서브메인 퍼블리싱 및 GUI 구현</li>
-                                <li>한국수력원자력(열린경영, 신재생, 소식참여) 퍼블리싱 및 GUI 구현</li>
-                                <li>서브 컨텐츠 페이지 퍼블리싱 및 GUI 구현</li>
-                                <li>공통 마크업 가이드 배포</li>
-                                <li>공통 UI 모션 개발 (슬라이드, GNB, SNB, 레이어팝업, 접근성 준수 툴팁 등)</li>
-                            </ul>
-                        </li>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">Description</h1>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:40%"></div>
+								<span title="참여 영역 중 기여도">40%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> :  <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+						<li><em>기간</em> : 2015.08.31 ~ 2015.12.10</li>
+						<li><em>담당업무</em> :
+							<ul>
+								<li>한국수력원자력 사업소 서브메인 퍼블리싱 및 GUI 구현</li>
+								<li>한국수력원자력(열린경영, 신재생, 소식참여) 퍼블리싱 및 GUI 구현</li>
+								<li>서브 컨텐츠 페이지 퍼블리싱 및 GUI 구현</li>
+								<li>공통 마크업 가이드 배포</li>
+								<li>공통 UI 모션 개발 (슬라이드, GNB, SNB, 레이어팝업, 접근성 준수 툴팁 등)</li>
+							</ul>
+						</li>
 
-                        <li><em>성과</em> :
-                            <ul>
-                                <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank">웹 접근성 마크 획득</a></li>
-                                <li>익스플로러(ie8~) 및 모던 브라우저 크로스브라우징</li>
-                                <li>Semantic Markup 퍼블리싱</li>
-                            </ul>
-                        </li>
-                        <li><em>고객사</em> : 한국수력원자력</li>
-                        <li><a href="https://www.khnp.co.kr" target="_blank">사이트 바로가기 : https://www.khnp.co.kr</a></li>
-                    </ul>
-                </div>
+						<li><em>성과</em> :
+							<ul>
+								<li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank">웹 접근성 마크 획득</a></li>
+								<li>익스플로러(ie8~) 및 모던 브라우저 크로스브라우징</li>
+								<li>Semantic Markup 퍼블리싱</li>
+							</ul>
+						</li>
+						<li><em>고객사</em> : 한국수력원자력</li>
+						<li><a href="https://www.khnp.co.kr" target="_blank">사이트 바로가기 : https://www.khnp.co.kr</a></li>
+					</ul>
+				</div>
 
-                <div class="slide_guide">
-                    <span class="ico_guide">slide_guide</span>
-                    <span class="slide_count">
-                        <span class="page_num">1</span> / <span class="page_total">0</span>
-                    </span>
-                </div>
+				<div class="slide_guide">
+					<span class="ico_guide">slide_guide</span>
+					<span class="slide_count">
+						<span class="page_num">1</span> / <span class="page_total">0</span>
+					</span>
+				</div>
 
-                <div id="touchSlider">
-                    <ul class="port_info">
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_han1.jpg" alt="한국수력원자력 스크린샷1" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_han2.jpg" alt="한국수력원자력 스크린샷2" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_han3.jpg" alt="한국수력원자력 스크린샷3" /></li>
-                    </ul>
-                </div>
+				<div id="touchSlider">
+					<ul class="port_info">
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_han1.jpg" alt="한국수력원자력 스크린샷1" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_han2.jpg" alt="한국수력원자력 스크린샷2" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_han3.jpg" alt="한국수력원자력 스크린샷3" /></li>
+					</ul>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
 
-            </article>
-        </div><!-- //container -->
-    </section>
+			</article>
+		</div><!-- //container -->
+	</section>
 
-    <!-- footer -->
+	<!-- footer -->
 </div>
 </body>
 </html>
