--- a/detail/web/w_kebhana_company.html
+++ b/detail/web/w_kebhana_company.html
@@ -10,65 +10,65 @@
 </head>
 <body>
 <div id="wrap">
-    <!-- header -->
+	<!-- header -->
 
-    <section id="container">
-        <div id="content_wrap" class="width_fix">
-            <div class="tit_bar">
-                <p class="tit">KEB 하나은행</p>
-                <p>KEB 하나은행 기업은행 서비스 운영</p>
-            </div>
+	<section id="container">
+		<div id="content_wrap" class="width_fix">
+			<div class="tit_bar">
+				<p class="tit">KEB 하나은행</p>
+				<p>KEB 하나은행 기업은행 서비스 운영</p>
+			</div>
 
-            <article id="content">
-                <div class="desc_area">
-                    <h1 class="title">WORK</h1>
-                    <ul class="description">
-                        <li class="progress"><em>참여도</em> :
-                            <span>
-                                <div class="bar" style="width:100%"></div>
-                                <span title="참여 영역 중 기여도">100%</span>
-                            </span>
-                        </li>
-                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">XHTML 1.0 Transitional</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="http://www.i-on.net/product/ics/index.html" target="_blank">ICS6(I-ON Content Server)</a></li>
-                        <li><em>기간</em> : 2017.01.11 – 2017.02.24</li>
-                        <li><em>담당업무</em> : KEB 하나은행 기업뱅킹 서비스 운영</li>
-                        <li><em>고객사</em> : KEB 하나은행 </li>
-                        <li><em>성과 </em>:
-                            <ul>
-                                <li>익스플로러(ie7~) 및 모던 브라우저 크로스브라우징</li>
-                                <li>W3C Markup Validator, 웹 접근성 자동 평가도구(K-wah) 통과</li>
-                                <li>웹 접근성 준수</li>
-                                <li>I-ON SERVER로 컨텐츠/개발서버 분리</li>
-                                <li>UI 모션 개발</li>
-                            </ul>
-                        </li>
-                        <li><a href="http://biz.kebhana.com" target="_blank"><em>사이트 바로가기</em> : http://biz.kebhana.com</a></li>
-                    </ul>
-                </div>
+			<article id="content">
+				<div class="desc_area">
+					<h1 class="title">Description</h1>
+					<ul class="description">
+						<li class="progress"><em>참여도</em> :
+							<span>
+								<div class="bar" style="width:100%"></div>
+								<span title="참여 영역 중 기여도">100%</span>
+							</span>
+						</li>
+						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">XHTML 1.0 Transitional</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="http://www.i-on.net/product/ics/index.html" target="_blank">ICS6(I-ON Content Server)</a></li>
+						<li><em>기간</em> : 2017.01.11 – 2017.02.24</li>
+						<li><em>담당업무</em> : KEB 하나은행 기업뱅킹 서비스 운영</li>
+						<li><em>고객사</em> : KEB 하나은행 </li>
+						<li><em>성과 </em>:
+							<ul>
+								<li>익스플로러(ie7~) 및 모던 브라우저 크로스브라우징</li>
+								<li>W3C Markup Validator, 웹 접근성 자동 평가도구(K-wah) 통과</li>
+								<li>웹 접근성 준수</li>
+								<li>I-ON SERVER로 컨텐츠/개발서버 분리</li>
+								<li>UI 모션 개발</li>
+							</ul>
+						</li>
+						<li><a href="http://biz.kebhana.com" target="_blank"><em>사이트 바로가기</em> : http://biz.kebhana.com</a></li>
+					</ul>
+				</div>
 
-                <div class="slide_guide">
-                    <span class="ico_guide">slide_guide</span>
-                    <span class="slide_count">
-                        <span class="page_num">1</span> / <span class="page_total">0</span>
-                    </span>
-                </div>
+				<div class="slide_guide">
+					<span class="ico_guide">slide_guide</span>
+					<span class="slide_count">
+						<span class="page_num">1</span> / <span class="page_total">0</span>
+					</span>
+				</div>
 
-                <div id="touchSlider">
-                    <ul class="port_info">
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company_1.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company_2.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company_3.jpg" alt="KEB 하나은행 웹 페이지 스크린샷3" /></li>
-                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company_4.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
-                    </ul>
-                </div>
+				<div id="touchSlider">
+					<ul class="port_info">
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company_1.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company_2.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company_3.jpg" alt="KEB 하나은행 웹 페이지 스크린샷3" /></li>
+						<li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company_4.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
+					</ul>
+				</div>
 
-                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
 
-            </article>
-        </div><!-- //container -->
-    </section>
+			</article>
+		</div><!-- //container -->
+	</section>
 
-    <!-- footer -->
+	<!-- footer -->
 </div>
 </body>
 </html>
