--- a/detail/web/w_kebhana_open.html
+++ b/detail/web/w_kebhana_open.html
@@ -21,7 +21,7 @@
 
 			<article id="content">
 				<div class="desc_area">
-					<h1 class="title">WORK</h1>
+					<h1 class="title">Description</h1>
 
 					<div class="point__detail--wrap">
 						<h2 class="sub_title">Three Points</h2>
@@ -83,7 +83,6 @@
 				</div>
 
 				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list btn--index">목록보기</a>
-
 			</article>
 		</div><!-- //container -->
 	</section>
