--- a/detail/web/w_samsung.html
+++ b/detail/web/w_samsung.html
@@ -11,7 +11,6 @@
 <body>
 <div id="wrap">
 	<!-- header -->
-
 	<section id="container">
 		<div id="content_wrap" class="width_fix">
 			<div class="tit_bar">
@@ -21,7 +20,7 @@
 
 			<article id="content">
 				<div class="desc_area">
-					<h1 class="title">WORK</h1>
+					<h1 class="title">Description</h1>
 
 					<div class="point__detail--wrap">
 						<h2 class="sub_title">Three Points</h2>
